2011-09-06 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy.pl: Delete a varaible which is not used.

2011-09-05 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy.pl: Added monitoring feature for Pandora FMS.
	* central_proxy.cfg: Added monitoring variables to config file.
	* ProxySelector.pm: Changed configuration file path from config file to
	ProxySelector lib.

2011-09-01 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy/ProxyLib.pm: Fixed an error in thread_exit function

2011-09-01 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy/ProxyConfig.pm: Created config lib.
	* central_proxy/central_proxy.pl: Moved config functions from ProxyLib
	to ProxyConfig.
	* central_proxy/ProxyLib.pm: Deleted some functions related to configuration.

2011-08-31 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy/ProxyFilter.pm: Created dummy ProxyFilter lib
	* central_proxy/proxy_selectors.cfg: Firt version of proxy selector conf file 
	* central_proxy/central_proxy.pl: Added support for ProxyFilter and ProxySelector libs
	* central_proxy/central_proxy.cfg: Added new parameter for proxy selector conf files.
	* central_proxy/ProxySelector.pm: Created dummy ProxySelector lib

2011-08-30 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy/central_proxy.pl: Modified central_proxy to support request
	logging.
	* central_proxy/RequestLog.pm: First version of request log file.
	* central_proxy/central_proxy.cfg: Added REQUESTS_LOG parameter to conf
	file.

2011-07-21 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy/ProxyLib.pm: Fixed a bind error when central server is restarting.

2011-06-20 Sancho Lerena <slerena@artica.es>

    * central_preoxy.pl,
    ProxyLib.pm: Fixed small problems on header.

2011-06-07 Dario Rodriguez <dario.rodriguez@artica.es>

	*satellite_proxy/cfg.php,
	satellite_proxy/lib.php,
	satellite_proxy/satellite_proxy.php,
	central_proxy/central_proxy.pl,