@@ -1,5 +1,12 @@
 2011-09-06 Dario Rodriguez <dario.rodriguez@artica.es>
 
+	* ProxyFilter.pm: Delete file.
+	* central_proxy.pl: Adapted to use new ProxySelector library.
+	* ProxySelector.pm: Now you can develop selections and filters with one
+	lib.
+
+2011-09-06 Dario Rodriguez <dario.rodriguez@artica.es>
+
 	* central_proxy.pl: Delete a varaible which is not used.
 
 2011-09-05 Dario Rodriguez <dario.rodriguez@artica.es>
